# checkdmarc

./: .buildinfo  .gitignore  .markdownlint.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  README.rst  \  api.html  build.sh  checkdmarc.html  checkdmarc.py  cli.html  environment_variables.html  genindex.html  index.html  installation.html  makedocs.sh  modules.html  objects.inv  publish-docs.sh  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  tests.py
.github/workflows/: python-tests.yaml
_modules/: checkdmarc.html  index.html
_modules/checkdmarc/: bimi.html  dmarc.html  dnssec.html  mta_sts.html  smtp.html  smtp_tls_reporting.html  soa.html  spf.html  utils.html
_modules/pyleri/: regex.html  sequence.html  token.html
_sources/: api.md.txt  checkdmarc.rst.txt  cli.md.txt  genindex.html  index.html  index.md.txt  index.rst.txt  installation.md.txt  modules.html  modules.rst.txt  objects.inv
_sources/_modules/: checkdmarc.html
_static/: documentation_options.js
checkdmarc/: __init__.py  _cli.py  _constants.py  bimi.py  dmarc.py  dnssec.py  mta_sts.py  smtp.py  smtp_tls_reporting.py  soa.py  spf.py  sts.py  utils.py
checkdmarc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
checkdmarc/resources/: MVACAs.pem  README.md
docs/: Makefile  installation.md  make.bat
docs/source/: api.md  cli.md  conf.py  environment_variables.md  index.md  index.rst
tests/: test_bimi.py  test_cli.py  test_constants.py  test_dmarc.py  test_dnssec.py  test_init.py  test_mta_sts.py  test_smtp.py  test_smtp_tls_reporting.py  test_soa.py  test_spf.py  test_utils.py
